<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ButtonCase">
    <string name="app_name">QuickNote</string>
    <string name="github_link"><![CDATA[This project is <a href=\"https://github.com/anubiann00b/QuickNote\">open source!</a>]]></string>
    <string name="editTextHint">Type Here…</string>
    <string name="madeByString">Made by Shreyas Raman</string>
    <string name="sendFeedback"><![CDATA[<a href=\"mailto:skraman1999@gmail.com\">Send Feedback!</a>]]></string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="opacity">Opacity</string>
    <string name="reset">Reset</string>
    <string name="saveAndClose"><![CDATA[Tap to save & close notepad]]></string>
    <string name="menu_clear">Clear</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_share">Share</string>
    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>
    <string name="menu_save_quit"><![CDATA[Save & Quit]]></string>
    <string name="lock_position">Lock Position</string>
    <string name="default_note_name">Default</string>
    <string name="show_intro_button">Show Intro</string>
    <string name="intro_note_title">Intro</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">CANCEL</string>

    <string name="intro_content">
        Welcome to QuickNote!\n\n
        This content can be shown again from Preferences.\n\n
        Top right button docks/undocks.\n\nLeft button opens the menu, with settings and info.\n\n
        \'+\' button creates new note.\n\n
        Dropdown in the center edits titles, and switches or deletes notes.\n\n
        Enjoy!
    </string>
</resources>
